apps/kolos/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kolos
  labels:
    app.kubernetes.io/part-of: kolos
